--- a/package.json
+++ b/package.json
@@ -26,9 +26,11 @@
     "eslint-plugin-react": "^7.7.0",
     "prettier": "^1.11.1"
   },
+  "peerDependencies": {
+    "babel-polyfill": "^6.26.0"
+  },
   "dependencies": {
     "axios": "^0.18.0",
-    "babel-polyfill": "^6.26.0",
     "jsonwebtoken": "^8.2.0",
     "memoizee": "^0.4.12",
     "url-join": "^4.0.0"
