--- a/package.json
+++ b/package.json
@@ -4,8 +4,9 @@
   "description": "",
   "main": "dist",
   "scripts": {
-    "prepare": "rm -rf dist && mkdir dist && babel src --out-dir dist --copy-files",
-    "watch": "babel src --out-dir dist --copy-files --watch"
+    "build": "babel src --out-dir dist --copy-files",
+    "prepare": "rm -rf dist && mkdir dist && npm run build",
+    "watch": "npm run build -- --watch"
   },
   "keywords": [],
   "author": "",
