--- a/package.json
+++ b/package.json
@@ -4,39 +4,39 @@
   "description": "",
   "main": "dist",
   "scripts": {
-    "build": "babel src --out-dir dist --copy-files",
-    "prepare": "rm -rf dist && mkdir dist && npm run build",
-    "watch": "nodemon --ignore dist/ --exec npm run build",
-    "test": "jest"
+    "build": "npm run build-ts && npm run tslint",
+    "build-ts": "tsc",
+    "watch-ts": "tsc -w",
+    "test": "mocha --exit -r ts-node/register test/**/*.ts",
+    "tslint": "tslint -c tslint.json -p tsconfig.json",
+    "tslint-check": "tslint-config-prettier-check ./tslint.json"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "@babel/cli": "^7.5.0",
-    "@babel/core": "^7.5.4",
-    "babel-jest": "^24.8.0",
-    "@babel/plugin-proposal-object-rest-spread": "^7.5.4",
-    "@babel/preset-env": "^7.5.4",
-    "eslint": "^4.19.1",
-    "eslint-config-prettier": "^2.10.0",
-    "eslint-config-react-app": "^2.1.0",
-    "eslint-plugin-flowtype": "^2.50.3",
-    "eslint-plugin-import": "^2.18.0",
-    "eslint-plugin-jsx-a11y": "^5.1.1",
-    "eslint-plugin-prettier": "^2.7.0",
-    "eslint-plugin-react": "^7.14.2",
-    "jest": "^24.8.0",
+    "@types/express": "^4.17.0",
+    "@types/jsonwebtoken": "^8.3.2",
+    "@types/lodash": "^4.14.136",
+    "@types/memoizee": "^0.4.2",
+    "@types/mocha": "^5.2.7",
+    "@types/ms": "^0.7.30",
+    "@types/url-join": "^4.0.0",
+    "chai": "^4.2.0",
+    "chai-http": "^4.3.0",
+    "concurrently": "^4.1.1",
+    "mocha": "^6.1.4",
     "nodemon": "^1.19.1",
-    "prettier": "^1.18.2"
-  },
-  "peerDependencies": {
-    "babel-polyfill": "^6.26.0"
+    "prettier": "1.18.2",
+    "testcontainers": "^1.1.19",
+    "ts-node": "^8.3.0",
+    "tslint": "^5.18.0",
+    "tslint-config-prettier": "^1.18.0",
+    "typescript": "^3.5.3"
   },
   "dependencies": {
     "axios": "^0.19.0",
     "jsonwebtoken": "^8.5.1",
-    "lodash": "^4.17.14",
     "memoizee": "^0.4.14",
     "path-to-regexp": "^2.4.0",
     "url-join": "^4.0.1"
