--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@overture-stack/ego-token-middleware",
-  "version": "1.1.1",
+  "version": "2.0.0",
   "description": "",
   "main": "dist",
   "scripts": {
@@ -12,10 +12,11 @@
     "tslint-check": "tslint-config-prettier-check ./tslint.json"
   },
   "keywords": [],
+  "typings": "./dist/index.d.ts",
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "@types/express": "^4.17.0",
+    "@types/express": "^4.17.8",
     "@types/jsonwebtoken": "^8.3.2",
     "@types/lodash": "^4.14.136",
     "@types/memoizee": "^0.4.2",
@@ -30,9 +31,9 @@
     "prettier": "1.18.2",
     "testcontainers": "^1.1.19",
     "ts-node": "^8.3.0",
-    "tslint": "^5.18.0",
+    "tslint": "^6.1.3",
     "tslint-config-prettier": "^1.18.0",
-    "typescript": "^3.5.3"
+    "typescript": "^4.0.3"
   },
   "dependencies": {
     "axios": "^0.19.0",
