--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@overture-stack/ego-token-middleware",
-  "version": "2.0.0",
+  "version": "2.1.0",
   "description": "",
   "main": "dist",
   "scripts": {
@@ -25,21 +25,20 @@
     "@types/url-join": "^4.0.0",
     "chai": "^4.2.0",
     "chai-http": "^4.3.0",
-    "concurrently": "^4.1.1",
-    "mocha": "^6.1.4",
-    "nodemon": "^1.19.1",
-    "prettier": "1.18.2",
-    "testcontainers": "^1.1.19",
-    "ts-node": "^8.3.0",
+    "concurrently": "^5.3.0",
+    "mocha": "^8.1.3",
+    "nodemon": "^2.0.5",
+    "prettier": "^2.1.2",
+    "ts-node": "^9.0.0",
     "tslint": "^6.1.3",
     "tslint-config-prettier": "^1.18.0",
     "typescript": "^4.0.3"
   },
   "dependencies": {
-    "axios": "^0.19.0",
+    "axios": "^0.20.0",
     "jsonwebtoken": "^8.5.1",
     "memoizee": "^0.4.14",
-    "path-to-regexp": "^2.4.0",
+    "path-to-regexp": "^6.2.0",
     "url-join": "^4.0.1"
   },
   "prettier": {
