--- a/package.json
+++ b/package.json
@@ -38,9 +38,10 @@
     "axios": "^0.21.1",
     "jsonwebtoken": "^8.5.1",
     "memoizee": "^0.4.14",
+    "ms": "^2.1.2",
     "path-to-regexp": "^6.2.0",
     "url-join": "^4.0.1",
-    "ms": "^2.1.2"
+    "zod": "^3.19.1"
   },
   "prettier": {
     "printWidth": 100,
