--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "build": "npm run build-ts && npm run tslint",
     "build-ts": "tsc",
     "watch-ts": "tsc -w",
-    "test": "mocha --exit -r ts-node/register test/**/*.ts test/*.ts",
+    "test": "mocha",
     "tslint": "tslint -c tslint.json -p tsconfig.json",
     "tslint-check": "tslint-config-prettier-check ./tslint.json"
   },
